--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,8 @@
-detectron2==0.6
-imutils==0.5.4
-inflect==5.3.0
-iopath==0.1.10
-matplotlib==3.6.0
-nltk==3.8.1
-numba==0.56.4
-numpy==1.23.3
-opt-einsum==3.3.0
-packaging==23.0
-pandas==1.5.3
-portalocker==2.7.0
-scikit-image==0.20.0
-scikit-learn==1.0.2
-scipy==1.9.1
-torch==2.0.0
-torchaudio==2.0.1
-torchfile==0.1.0
-torchvision==0.15.1
-
+torch==1.5
+torchvision==0.6
+cython
+pyyaml==5.1
+git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI
+detectron2 @ git+https://github.com/facebookresearch/detectron2.git
+git+https://github.com/facebookresearch/fvcore.git
+yacs
