--- a/requirements.txt
+++ b/requirements.txt
@@ -40,4 +40,4 @@ typing_extensions==4.6.3
 urllib3==2.0.3
 yacs==0.1.8
 zipp==3.15.0
--e /Users/glenquadros/Desktop/DataR Labs/Car Damage Detection/myenv/detectron-env/detectron2
+git+https://github.com/facebookresearch/detectron2.git
