--- a/requirements.txt
+++ b/requirements.txt
@@ -69,4 +69,4 @@ urllib3==1.26.16
 Werkzeug==2.3.6
 yacs==0.1.8
 zipp==3.15.0
--e ./detectron2
+/Users/glenquadros/Desktop/DataR Labs/Car Damage Detection/myenv/detectron-env/detectron2
