--- a/requirements.txt
+++ b/requirements.txt
@@ -69,4 +69,5 @@ urllib3==1.26.16
 Werkzeug==2.3.6
 yacs==0.1.8
 zipp==3.15.0
-/Users/glenquadros/Desktop/DataR Labs/Car Damage Detection/myenv/detectron-env/detectron2
+git+https://github.com/facebookresearch/detectron2
+git+https://github.com/facebookresearch/fvcore.git
