--- a/requirements.txt
+++ b/requirements.txt
@@ -71,3 +71,5 @@ yacs==0.1.8
 zipp==3.15.0
 git+https://github.com/facebookresearch/detectron2
 git+https://github.com/facebookresearch/fvcore.git
+git+https://github.com/facebookresearch/iopath
+git+https://github.com/WoLpH/portalocker
